--- a/BancoEletronico/TelaInicial/Extrato.xaml
+++ b/BancoEletronico/TelaInicial/Extrato.xaml
@@ -8,6 +8,15 @@
         Title="Extrato" Height="650" Width="550">
     <Grid>
         <Label x:Name="lblNomeExtrato" Content="Extrato" Margin="224,10,234,0" VerticalAlignment="Top" Height="45" ContextMenuClosing="lblNomeExtrato_ContextMenuClosing" FontSize="22" FontWeight="Bold"/>
+        <Label x:Name="lblNumeroConta" Content="Número da conta:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,150,0,0"/>
+        <Label x:Name="lblNome" Content="Nome:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,71,0,0"/>
+        <Label x:Name="lbl_Cpf" Content="Cpf:" HorizontalAlignment="Left" Margin="10,112,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblSaldo" Content="Saldo:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,187,0,0"/>
+        <TextBlock x:Name="txtSaldo" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="110,192,0,0"><Run Text="TextBlock"/></TextBlock>
+        <TextBlock x:Name="txtNumeroConta" HorizontalAlignment="Left" Margin="110,150,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
+        <TextBlock x:Name="txtNome" TextWrapping="Wrap" Text="TextBlock" Margin="110,76,382,527"/>
+        <TextBlock x:Name="txtCpf" TextWrapping="Wrap" Margin="110,117,382,486"><Run Text="TextBlock"/></TextBlock>
+        <Button x:Name="btnGerar" Content="Gerar" HorizontalAlignment="Left" Margin="425,310,0,0" VerticalAlignment="Top" Width="75" Click="btnGerar_Click"/>
 
     </Grid>
 </Window>
