--- a/BancoEletronico/TelaInicial/Extrato.xaml
+++ b/BancoEletronico/TelaInicial/Extrato.xaml
@@ -8,15 +8,16 @@
         Title="Extrato" Height="650" Width="550">
     <Grid>
         <Label x:Name="lblNomeExtrato" Content="Extrato" Margin="224,10,234,0" VerticalAlignment="Top" Height="45" ContextMenuClosing="lblNomeExtrato_ContextMenuClosing" FontSize="22" FontWeight="Bold"/>
-        <Label x:Name="lblNumeroConta" Content="Número da conta:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,150,0,0"/>
-        <Label x:Name="lblNome" Content="Nome:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,71,0,0"/>
-        <Label x:Name="lbl_Cpf" Content="Cpf:" HorizontalAlignment="Left" Margin="10,112,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblSaldo" Content="Saldo:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,187,0,0"/>
-        <TextBlock x:Name="txtSaldo" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="110,192,0,0"><Run Text="TextBlock"/></TextBlock>
-        <TextBlock x:Name="txtNumeroConta" HorizontalAlignment="Left" Margin="110,150,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-        <TextBlock x:Name="txtNome" TextWrapping="Wrap" Text="TextBlock" Margin="110,76,382,527"/>
-        <TextBlock x:Name="txtCpf" TextWrapping="Wrap" Margin="110,117,382,486"><Run Text="TextBlock"/></TextBlock>
-        <Button x:Name="btnGerar" Content="Gerar" HorizontalAlignment="Left" Margin="425,310,0,0" VerticalAlignment="Top" Width="75" Click="btnGerar_Click"/>
+        <Label x:Name="lblNumeroConta" Content="Número da conta:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,262,0,0" FontSize="18"/>
+        <Label x:Name="lblNome" Content="Nome:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,117,0,0" FontSize="18"/>
+        <Label x:Name="lbl_Cpf" Content="Cpf:" HorizontalAlignment="Left" Margin="10,190,0,0" VerticalAlignment="Top" FontSize="18"/>
+        <Label x:Name="lblSaldo" Content="Saldo:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="15,337,0,0" FontSize="18"/>
+        <TextBlock x:Name="txtSaldo" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Margin="89,345,0,0" FontSize="18" Width="124"><Run Text=""/></TextBlock>
+        <TextBlock x:Name="txtNumeroConta" HorizontalAlignment="Left" Margin="168,269,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" FontSize="18" Width="118"/>
+        <TextBlock x:Name="txtNome" TextWrapping="Wrap" Margin="108,124,304,468" FontSize="18"/>
+        <TextBlock x:Name="txtCpf" TextWrapping="Wrap" Margin="101,195,338,397" FontSize="18"><Run Text=""/></TextBlock>
+        <Button x:Name="btnGerar" HorizontalAlignment="Left" Margin="437,504,0,0" VerticalAlignment="Top" Width="75" Click="btnGerar_Click" Height="20" Content="Gerar"/>
+        <Button x:Name="btnSair" Content="Sair" HorizontalAlignment="Left" Margin="437,544,0,0" VerticalAlignment="Top" Width="76" Click="btnSair_Click"/>
 
     </Grid>
 </Window>
