--- a/BancoEletronico/TelaInicial/LoginCliente.xaml
+++ b/BancoEletronico/TelaInicial/LoginCliente.xaml
@@ -16,8 +16,8 @@
         <Button x:Name="btnDepositar" Content="Depositar" Margin="368,225,368,0" Height="40" VerticalAlignment="Top" Click="btnDepositar_Click"/>
         <Button x:Name="btnExtrato" Content="Extrato" Margin="646,225,90,0" VerticalAlignment="Top" Height="40" Click="btnExtrato_Click"/>
         <Button x:Name="btnVoltar" Content="Voltar" HorizontalAlignment="Left" Margin="761,419,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click"/>
-        <Label x:Name="lblCliente"  HorizontalAlignment="Left" Margin="46,116,0,0" VerticalAlignment="Top" FontSize="18" Initialized="lblCliente_Initialized"/>
-        <Button Content="Cliente" HorizontalAlignment="Left" Margin="192,121,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Label x:Name="lblCliente"  HorizontalAlignment="Left" Margin="207,102,0,0" VerticalAlignment="Top" FontSize="18" Width="220"  />
+        <Label x:Name="lblBV" Content="Seja bem vindo(a):" HorizontalAlignment="Left" Margin="46,102,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.486,0.827" FontSize="18"/>
 
     </Grid>
 </Window>
