--- a/BancoEletronico/TelaInicial/LoginClienteConta.xaml
+++ b/BancoEletronico/TelaInicial/LoginClienteConta.xaml
@@ -14,7 +14,7 @@
         <TextBox x:Name="txtNumero" HorizontalAlignment="Left" Height="23" Margin="248,234,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="lblNumero" Content="Numero da Conta:" HorizontalAlignment="Left" Margin="104,231,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btnLogar" Content="Logar" HorizontalAlignment="Left" Margin="268,378,0,0" VerticalAlignment="Top" Width="74" Click="btnLogar_Click"/>
-        <TextBox x:Name="txtSenha" HorizontalAlignment="Left" Height="24" Margin="248,301,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <PasswordBox x:Name="txtSenha" HorizontalAlignment="Left" Height="24" Margin="248,301,0,0" VerticalAlignment="Top" Width="120"/>
         <Label x:Name="lblSenha" Content="Senha: " HorizontalAlignment="Left" Margin="104,301,0,0" VerticalAlignment="Top"/>
         <Button x:Name="btnVoltar"  Content="Voltar" HorizontalAlignment="Left" Margin="761,419,0,0" VerticalAlignment="Top" Width="75" Click="btnVoltar_Click" />
 
